- Flatten one-off recordings
- Support recording filesize via the filesystem
- Changes for EPG persistance new uid and improved art API V5
- Show multiple genres with colour tags from V5 backend
- Only get EPG listing when backend has EPG for channel - V5
- Fix GetNumChannels() return count of all channels.
- Add menuhooks to reset channels, icons, and groups and also to 'Forget' recording

v4.3.8
- Update: PVR API 6.5.0

v4.3.7
- Update: PVR API 6.4.0

v4.3.6
- Cache EPG event ID to make system usable after daily update. Lose link to recordings.
- Disable New flag from backend
- Add Live, Premiere and Finale flags

v4.3.5
- PVR API 6.3.0

v4.3.4
- Update Debian build code
- Update with some minor cleanups
- Cleanup source copyright to match SPDX
- Add license name, forum url and source url to addon.xml
- Add GPL2 license file and show GPL-2.0-or-later on README.md

v4.3.3
- Update PVR API 6.2.0 - strFirstAired and EPG New flag
- add channel name to recordings
- default recording and EPG series/episode numbers to invalid

v4.3.2
- Updated language files from Transifex

v4.3.1
- Replace AppVeyor with Azure for test build (better performance)
- Add p8-platform to addon depends instead of from kodi
- enable skipping while paused

v4.3.0
- implement v5 timeshifting
- added v5 transcoded playback (not timeshifted)
- improve playback of in progress recordings
- added original air date as firstAired
- live and new flags modify firstAired
- added Advanced Recording type
- Add genres to recordings (Kodi bug doesn't display them)
- can force delete of all channel icons from the setup screen
- added the sid to recordings
- removed forced (YEAR) from EPG titles, Kodi V19 does this now.
- reintroduce XMLUtils makes the parsing code easier to read.
- continue to change c to c++
- fixed bug passing empty group titles to Kodi (kodi bug)

v4.2.0
- Recompile for 6.1.0 PVR Addon API compatibility

v4.1.1
- Update build system version and cleanup
- Fix package check for JsonCpp